added multiple node pool files

--- a/private-cloud/boldbi-manifest/boldbi/configuration/pvclaim_azure_nfs.yaml
+++ b/private-cloud/boldbi-manifest/boldbi/configuration/pvclaim_azure_nfs.yaml
@@ -23,8 +23,8 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   storageClassName: azurefile-csi-nfs
   nfs:
-    path: /<storage_account_name>/<fileshare_name>/<folder_name>
-    server: <storage_account_name>.file.core.windows.net
+    path: /salesdeskstagingdemo/new
+    server: salesdeskstagingdemo.file.core.windows.net
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
