--- a/private-cloud/boldbi-manifest/kustomization.yaml
+++ b/private-cloud/boldbi-manifest/kustomization.yaml
@@ -2,13 +2,13 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - nginx/deployment.yaml
+  #- nginx/deployment.yaml
 
   - azure-file-csi/deployment.yaml
   
   - boldbi/namespace.yaml
   #- boldbi/configuration/pvclaim_onpremise.yaml
-  #- boldbi/configuration/pvclaim_azure_nfs.yaml
+  - boldbi/configuration/pvclaim_azure_nfs.yaml
   - boldbi/configuration/log4net_config.yaml
   - boldbi/configuration/root-user-details.yaml
   - boldbi/configuration/version-config.yaml
